src/styles/base/components/popover.scss
@import "../../abstracts/index";

.react-tiny-popover-container {
  z-index: var(--z-index-popover);
}

.jk-popover-layout, .jk-popover-layout-pointer-after, .jk-popover-layout-pointer-before {
  display: flex;
  //opacity: 0;
  //z-index: var(--z-index-popover);
  @include transition(opacity, left, top);
  
  &:not(.display) {
    //position: absolute;
    //top: -10000px !important;
    //left: -10000px !important;
  }
  
  &.display {
    //position: fixed;
    //opacity: 1;
  }
  
  &.showPopperArrow {
    &::before, &::after {
      position: absolute;
      width: 14px;
      height: 14px;
      background-color: var(--t-color-white);
      transform: rotate(45deg);
    }
    
    &::before {
      z-index: -1;
      //box-shadow: 0px 0px 5px 0px #767D84;
      box-shadow: 0px 0px 20px -2px rgba(0, 0, 0, 0.25), 0 0 8px -2px rgba(0, 0, 0, 0.25);
    }
    
    &.bottom, &.bottomLeft, &.bottomRight {
      &::before, &::after {
        top: -7px;
        border-radius: 6px 0 14px 0;
      }
    }
    
    &.bottomRight, &.topRight {
      &:before, &:after {
        //right: calc(var(--border-radius-md) * 2); // To popper arrow same with placement
      }
    }
    
    &.bottomLeft, &.topLeft {
      &:before, &:after {
        //left: calc(var(--border-radius-md) * 2); // To popper arrow same with placement
      }
    }
    
    &.top, &.topLeft, &.topRight {
      &:before, &:after {
        bottom: -7px;
        border-radius: 14px 0 6px 0;
      }
    }
    
    &.right, &.rightTop, &.rightBottom {
      &:before, &:after {
        left: -7px;
        border-radius: 0 14px 0 4px;
      }
    }
    
    &.rightTop, &.leftTop {
      &:before, &:after {
        //top: calc(var(--border-radius-md) * 2); // To popper arrow same with placement
      }
    }
    
    &.rightBottom, &.leftBottom {
      &:before, &:after {
        //bottom: calc(var(--border-radius-md) * 2); // To popper arrow same with placement
      }
    }
    
    &.left, &.leftTop, &.leftBottom {
      &:before, &:after {
        right: -7px;
        border-radius: 0 6px 0 14px;
      }
    }
  }
  
  .jk-popover-content {
    //@extend .elevation-1;
  }
  
  &.bottomRight, &.bottom, &.bottomLeft {
    align-items: flex-start;
  }
  
  &.bottomRight, &.topRight {
    justify-content: flex-end;
  }
  
  &.bottom, &.top, &.center, &.centerScreen {
    justify-content: center;
  }
  
  &.bottomLeft, &topLeft {
    justify-content: flex-start;
  }
  
  &.topRight, &.top, &.topLeft {
    align-items: flex-end;
  }
  
  &.rightTop, &.right, &.rightBottom {
    //margin-left: var(--pad-t);
  }
  
  &.rightTop, &.leftTop {
    align-items: flex-start;
  }
  
  &.right, &.left, &.center, &.centerScreen {
    align-items: center;
  }
  
  &.rightBottom, &.leftBottom {
    align-items: flex-end;
  }
  
  &.leftBottom, &.left, &.leftTop {
    justify-content: flex-end;
  }
}

.jk-popover-layout-pointer-after, .jk-popover-layout-pointer-before {
  justify-content: center !important;
  align-items: center !important;
}

.jk-popover-layout-pointer-after {
  &:after {
    content: "";
  }
}

.jk-popover-layout-pointer-before {
  &:before {
    content: "";
  }
}

